--- a/styles.css
+++ b/styles.css
@@ -544,21 +544,21 @@ body.dark-mode .stat-subtext {
 .chart-card h3, .line-chart-container h3 {
   margin-bottom: 12px;
   color: #000000;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: center;
 }
 .chart-wrap { 
-  position: relative; 
-  width: 100%; 
+  position: relative;
+  width:100%; 
   height: 180px;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 .line-chart-wrap { 
   position: relative; 
+  margin-top: 50px;
   width: 100%;
   height: 100%;
 }
